trunk/Archive2/b2/35416c08c8ce06/output
main.cpp:5:1: error: static assertion failed: 
 static_assert(std::is_member_function_pointer<int Class::*>(), "");
 ^
