trunk/Archive2/b2/35416c08c8ce06/main.cpp
#include <type_traits>

class Class {};

static_assert(std::is_member_function_pointer<int Class::*>(), "");

int main()
{}